[project]
name = "crawl4ai-mcp"
version = "0.0.0"
description = "MCP server for integrating web crawling and RAG into AI agents and AI coding assistants"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7.7",
    "dotenv>=0.9.9",
    "mcp>=1.25.0",
    "neo4j>=6.0.3",
    "openai>=2.8.1",
    "sentence-transformers>=5.2.0",
    "supabase>=2.27.0",
]
