[project]
name = "crawl4ai-mcp"
version = "0.0.0"
description = "MCP server for integrating web crawling and RAG into AI agents and AI coding assistants"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7",
    "mcp>=1.25",
    "supabase>=2.27",
    "openai>=2.8",
    "dotenv>=0.9",
    "sentence-transformers>=5.2",
    "neo4j>=6.0",
]
